--- a/app/src/main/res/layout/activity_levels.xml
+++ b/app/src/main/res/layout/activity_levels.xml
@@ -3,22 +3,59 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/stages_tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <LinearLayout
+        android:id="@+id/upper_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <ImageButton
+            android:id="@+id/game_back_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:layout_margin="5dp"
+            android:background="@color/Transparent"
+            android:contentDescription=""
+            android:src="@drawable/ic_back" />
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ImageButton
+                android:id="@+id/hint_btn"
+                android:layout_width="70dp"
+                android:layout_height="match_parent"
+                android:layout_toStartOf="@id/restart_level"
+                android:background="@color/Transparent"
+                android:contentDescription=""
+                android:src="@drawable/ic_question_mark" />
+
+            <ImageButton
+                android:id="@+id/restart_level"
+                android:layout_width="60dp"
+                android:layout_height="match_parent"
+                android:layout_alignParentEnd="true"
+                android:layout_gravity="center"
+                android:background="@color/Transparent"
+                android:src="@drawable/restart_img" />
+        </RelativeLayout>
+
+    </LinearLayout>
+
+    <ImageView
+        android:layout_below="@id/upper_layout"
+        android:id="@+id/game_logo"
+        android:layout_width="360dp"
+        android:layout_height="100dp"
         android:layout_centerHorizontal="true"
-        android:padding="20dp"
-        android:text="Make it Even"
-        android:textSize="50dp"
-        android:textColor="@color/primaryTextColor"
-        android:textStyle="italic" />
+        android:contentDescription=""
+        android:src="@drawable/makeiteven_v2" />
 
     <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/recycler_levels_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/stages_tv"
+        android:layout_below="@+id/game_logo"
         android:layout_centerHorizontal="true"
         android:layout_margin="5dp" />
 </RelativeLayout>
