--- a/app/src/main/res/layout/activity_start__screen.xml
+++ b/app/src/main/res/layout/activity_start__screen.xml
@@ -1,10 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/Main_layout"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/start_activity_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/color_change"
-    android:layoutDirection="ltr">
+    android:layoutDirection="ltr"
+    tools:context=".StartScreenActivity">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/temp_container">
+    </RelativeLayout>
 
     <ImageView
         android:id="@+id/game_logo"
