--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -2,8 +2,10 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/root_element_settings"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="300dp"
+    android:layout_height="500dp"
+    android:background="@drawable/fragment_background"
+    android:layout_centerInParent="true">
 
     <RelativeLayout
         android:id="@+id/seek1"
@@ -47,7 +49,8 @@
                 android:id="@+id/main_sound_seekbar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/main_sound_txtv" />
+                android:layout_below="@+id/main_sound_txtv"
+                android:max="100"/>
         </LinearLayout>
     </RelativeLayout>
 
@@ -79,7 +82,8 @@
             android:id="@+id/soundEffect_bar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/view_sound_efects" />
+            android:layout_below="@+id/view_sound_efects"
+            android:max="100"/>
     </RelativeLayout>
 
     <Button
@@ -95,11 +99,10 @@
         android:textAllCaps="false" />
 
     <ImageButton
-        android:id="@+id/close_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/close_setting_btn"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_alignParentRight="true"
-        android:layout_margin="10dp"
         android:background="@color/Transparent"
         android:clickable="true"
         android:focusable="true"
