--- a/app/src/main/res/layout/activity_tutorial.xml
+++ b/app/src/main/res/layout/activity_tutorial.xml
@@ -7,12 +7,10 @@
     android:layout_height="match_parent"
     android:layoutDirection="ltr"
     tools:context=".GameActivity">
-
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true">
-
         <LinearLayout
             android:id="@+id/arcade_container"
             android:layout_width="wrap_content"
@@ -25,9 +23,9 @@
                 android:id="@+id/timer_txt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
                 android:padding="5dp"
                 android:text=""
+                android:layout_gravity="center_horizontal"
                 android:textColor="@color/primaryTextColor"
                 android:textSize="24sp"
                 android:textStyle="bold" />
@@ -51,8 +49,8 @@
                     android:id="@+id/actual_score_tv"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="5dp"
                     android:text=""
+                    android:padding="5dp"
                     android:textColor="@color/blue"
                     android:textSize="30sp"
                     android:textStyle="bold" />
@@ -67,10 +65,10 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/arcade_container"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="5dp"
-            android:text=""
             android:textColor="@color/primaryTextColor"
+            android:layout_marginTop="5dp"
             android:textSize="55sp"
+            android:text=""
             android:textStyle="bold" />
 
 
@@ -80,8 +78,8 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/the_number"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="15dp"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            >
 
             <com.nex3z.togglebuttongroup.SingleSelectToggleGroup
                 android:id="@+id/group_choices_of_numbers"
@@ -231,9 +229,7 @@
                 android:layout_toStartOf="@id/restart_level"
                 android:background="@color/Transparent"
                 android:contentDescription=""
-                android:src="@drawable/ic_help"
-                android:scaleType="fitCenter"
-                android:layout_margin="5dp"/>
+                android:src="@drawable/ic_question_mark" />
 
             <ImageButton
                 android:id="@+id/restart_level"
@@ -247,21 +243,5 @@
 
     </LinearLayout>
 
-<RelativeLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#ffff"
-    android:id="@+id/hiding_layout"
-    android:visibility="invisible">
-
-</RelativeLayout>
-    <ImageView
-        android:id="@+id/countdown_imageview"
-        android:layout_width="350dp"
-        android:layout_height="350dp"
-        android:layout_margin="5dp"
-        android:layout_centerInParent="true"
-        android:background="@drawable/ic_three"
-        android:focusable="true" />
 
 </RelativeLayout>
