--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -223,36 +223,39 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+
             <ImageButton
                 android:id="@+id/hint_btn_3"
                 android:layout_width="50dp"
                 android:layout_height="match_parent"
+                android:layout_marginEnd="7dp"
                 android:layout_toStartOf="@id/hint_btn_2"
                 android:background="@color/Transparent"
                 android:contentDescription=""
-                android:src="@drawable/ic_help"
                 android:scaleType="fitCenter"
-                android:layout_marginEnd="7dp"/>
+                android:src="@drawable/ic_help" />
+
             <ImageButton
                 android:id="@+id/hint_btn_2"
                 android:layout_width="50dp"
                 android:layout_height="match_parent"
+                android:layout_marginEnd="7dp"
                 android:layout_toStartOf="@id/hint_btn"
                 android:background="@color/Transparent"
                 android:contentDescription=""
-                android:src="@drawable/ic_help"
                 android:scaleType="fitCenter"
-                android:layout_marginEnd="7dp"/>
+                android:src="@drawable/ic_help" />
+
             <ImageButton
                 android:id="@+id/hint_btn"
                 android:layout_width="50dp"
                 android:layout_height="match_parent"
+                android:layout_marginEnd="7dp"
                 android:layout_toStartOf="@id/restart_level"
                 android:background="@color/Transparent"
                 android:contentDescription=""
-                android:src="@drawable/ic_help"
                 android:scaleType="fitCenter"
-                android:layout_marginEnd="7dp"/>
+                android:src="@drawable/ic_help" />
 
             <ImageButton
                 android:id="@+id/restart_level"
@@ -266,21 +269,21 @@
 
     </LinearLayout>
 
-<RelativeLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#ffff"
-    android:id="@+id/hiding_layout"
-    >
-    <ImageView
-        android:id="@+id/countdown_imageview"
-        android:layout_width="350dp"
-        android:layout_height="350dp"
-        android:layout_margin="5dp"
-        android:layout_centerInParent="true"
-        android:background="@drawable/ic_three"
-        android:focusable="true" />
-</RelativeLayout>
+    <RelativeLayout
+        android:id="@+id/hiding_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#ffff">
+
+        <ImageView
+            android:id="@+id/countdown_imageview"
+            android:layout_width="350dp"
+            android:layout_height="350dp"
+            android:layout_centerInParent="true"
+            android:layout_margin="5dp"
+            android:background="@drawable/ic_three"
+            android:focusable="true" />
+    </RelativeLayout>
 
 
 </RelativeLayout>
