--- a/app/src/main/res/layout/activity_start__screen.xml
+++ b/app/src/main/res/layout/activity_start__screen.xml
@@ -60,4 +60,14 @@
         android:background="@color/Transparent"
         android:scaleType="fitCenter"
         android:src="@drawable/score_btn_icon" />
+
+    <Button
+        android:id="@+id/totorial_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="79dp"
+        android:layout_marginBottom="13dp"
+        android:text="Button" />
 </RelativeLayout>
