--- a/app/src/main/res/layout/score_cell.xml
+++ b/app/src/main/res/layout/score_cell.xml
@@ -4,12 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:layoutDirection="ltr"
+    >
 <LinearLayout
     android:layout_width="wrap_content"
     android:layout_height="43dp"
-    android:layout_centerHorizontal="true">
-
+    android:layout_centerHorizontal="true"
+>
     <TextView
         android:layout_width="150dp"
         android:layout_height="wrap_content"
@@ -19,7 +21,8 @@
         android:textStyle="bold"
         android:textSize="25sp"
         android:textColor="@color/primaryColor"
-        tools:ignore="HardcodedText" />
+        tools:ignore="HardcodedText"
+        android:textDirection="ltr"/>
     <TextView
         android:layout_width="100dp"
         android:layout_height="wrap_content"
@@ -27,7 +30,8 @@
         android:text="test"
         android:textColor="@color/primaryTextColor"
         android:textStyle="bold"
-        tools:ignore="HardcodedText" />
+        tools:ignore="HardcodedText"
+        android:textDirection="ltr"/>
 </LinearLayout>
 
 </RelativeLayout>
