--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -52,6 +52,7 @@
                 android:id="@+id/main_sound_seekbar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:thumb="@drawable/ic_seekbar_thumb"
                 android:layout_below="@+id/main_sound_txtv"
                 android:max="100" />
         </LinearLayout>
@@ -87,6 +88,7 @@
             android:id="@+id/soundEffect_bar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:thumb="@drawable/ic_seekbar_thumb"
             android:layout_below="@+id/view_sound_efects"
             android:max="100" />
     </RelativeLayout>
