--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -220,18 +220,28 @@
             android:contentDescription=""
             android:src="@drawable/ic_back" />
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layoutDirection="rtl"
+            android:padding="5dp">
+
+            <ImageButton
+                android:id="@+id/restart_level"
+                android:layout_width="60dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_marginEnd="5dp"
+                android:background="@color/Transparent"
+                android:scaleType="fitCenter"
+                android:src="@drawable/ic_restart" />
 
             <ImageButton
                 android:id="@+id/hint_btn_3"
                 android:layout_width="50dp"
                 android:layout_height="match_parent"
                 android:layout_marginEnd="7dp"
-                android:layout_toStartOf="@id/hint_btn_2"
                 android:background="@color/Transparent"
-                android:contentDescription=""
                 android:scaleType="fitCenter"
                 android:src="@drawable/ic_help" />
 
@@ -240,9 +250,7 @@
                 android:layout_width="50dp"
                 android:layout_height="match_parent"
                 android:layout_marginEnd="7dp"
-                android:layout_toStartOf="@id/hint_btn"
                 android:background="@color/Transparent"
-                android:contentDescription=""
                 android:scaleType="fitCenter"
                 android:src="@drawable/ic_help" />
 
@@ -251,24 +259,12 @@
                 android:layout_width="50dp"
                 android:layout_height="match_parent"
                 android:layout_marginEnd="7dp"
-                android:layout_toStartOf="@id/restart_level"
                 android:background="@color/Transparent"
-                android:contentDescription=""
                 android:scaleType="fitCenter"
                 android:src="@drawable/ic_help" />
 
-            <ImageButton
-                android:id="@+id/restart_level"
-                android:layout_width="60dp"
-                android:layout_height="match_parent"
-                android:layout_alignParentEnd="true"
-                android:layout_gravity="center"
-                android:layout_marginEnd="5dp"
-                android:background="@color/Transparent"
-                android:padding="7dp"
-                android:scaleType="fitXY"
-                android:src="@drawable/ic_restart" />
-        </RelativeLayout>
+
+        </LinearLayout>
 
     </LinearLayout>
 
