--- a/app/src/main/res/drawable/fragment_background.xml
+++ b/app/src/main/res/drawable/fragment_background.xml
@@ -5,7 +5,7 @@
             <!-- SHADOW LAYER -->
             <item android:top="4dp" >
                 <shape android:shape="rectangle">
-                    <solid android:color="#6B6564" />
+                    <solid android:color="#B8B8B8" />
                     <corners android:radius="8dp"/>
                 </shape>
             </item>
@@ -13,9 +13,9 @@
             <item android:bottom="4dp">
                 <shape>
                     <gradient
-                        android:startColor="#A2A2A2"
-                        android:endColor="#A2A2A2"
-                        android:centerColor="#CFBFBF"/>
+                        android:startColor="#F0F0F0"
+                        android:endColor="#E0E0E0"
+                        android:centerColor="#CFC9C9"/>
                     <size
                         android:width="100dp"
                         android:height="100dp" />
@@ -29,7 +29,7 @@
             <!-- SHADOW LAYER -->
             <item android:top="4dp" >
                 <shape android:shape="rectangle">
-                    <solid android:color="#6B6564" />
+                    <solid android:color="#B8B8B8" />
                     <corners android:radius="8dp"/>
                 </shape>
             </item>
@@ -37,9 +37,9 @@
             <item android:bottom="4dp">
                 <shape>
                     <gradient
-                        android:startColor="#A2A2A2"
-                        android:endColor="#A2A2A2"
-                        android:centerColor="#CFBFBF"/>
+                        android:startColor="#F0F0F0"
+                        android:endColor="#E0E0E0"
+                        android:centerColor="#CFCACA"/>
                     <size
                         android:width="100dp"
                         android:height="100dp" />
