--- a/app/src/main/res/layout/activity_tutorial.xml
+++ b/app/src/main/res/layout/activity_tutorial.xml
@@ -43,7 +43,7 @@
             android:text="Next"
             android:textStyle="bold"
             android:background="@drawable/fragment_background"
-            android:id="@+id/next_btn"
+            android:id="@+id/next_btn_ib"
             android:layout_toEndOf="@+id/back_btn"
             android:layout_marginStart="20dp"/>
 
