--- a/app/src/main/res/layout/activity_start__screen.xml
+++ b/app/src/main/res/layout/activity_start__screen.xml
@@ -70,7 +70,7 @@
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="79dp"
         android:layout_marginBottom="13dp"
-        android:text="Button" />
+        android:text="Tutorial" />
 
     <RelativeLayout
         android:layout_width="wrap_content"
