--- a/app/src/main/res/layout/fragment_end_of_arcade_game.xml
+++ b/app/src/main/res/layout/fragment_end_of_arcade_game.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/end_of_arcade_game_screen"
     android:layout_width="300dp"
-    android:layout_height="500dp"
+    android:layout_height="400dp"
     android:layout_centerInParent="true"
     android:background="@drawable/fragment_background"
     android:orientation="vertical">
@@ -49,40 +49,43 @@
         android:hint="Enter  nickname: "
         android:inputType="textCapSentences"
         android:padding="10dp"
-        android:textSize="20sp" />
-
-    <Button
-        android:id="@+id/play_again_btn"
-        android:layout_width="250dp"
-        android:layout_height="60dp"
-        android:layout_gravity="center"
-        android:layout_marginTop="30dp"
-        android:background="@drawable/arcade_btn"
-        android:text="Play again"
-        android:textAllCaps="false"
         android:textSize="20sp"
-        android:textStyle="bold" />
+        android:layout_marginTop="20dp"/>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="center">
 
-    <Button
-        android:id="@+id/play_stage_mode_btn"
-        android:layout_width="250dp"
-        android:layout_height="60dp"
-        android:layout_gravity="center"
-        android:layout_marginTop="30dp"
-        android:background="@drawable/stage_btn"
-        android:text="Play stage mode"
-        android:textAllCaps="false"
-        android:textSize="20sp"
-        android:textStyle="bold" />
+        <ImageButton
+            android:id="@+id/scoreBoard_ib"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_gravity="center"
+            android:layout_margin="5dp"
+            android:background="@color/Transparent"
+            android:scaleType="fitCenter"
+            android:src="@drawable/score_btn_icon" />
 
-    <ImageButton
-        android:id="@+id/scoreBoard_ib"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="45dp"
-        android:background="@color/Transparent"
-        android:scaleType="fitCenter"
-        android:src="@drawable/score_btn_icon" />
+        <ImageButton
+            android:id="@+id/play_again_btn"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_gravity="center"
+            android:layout_margin="5dp"
+            android:background="@color/Transparent"
+            android:scaleType="fitCenter"
+            android:src="@drawable/ic_restart" />
 
+        <ImageButton
+            android:id="@+id/play_stage_mode_btn"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_gravity="center"
+            android:layout_margin="5dp"
+            android:src="@drawable/ic_house"
+            android:background="@color/Transparent"
+     />
+
+
+    </LinearLayout>
 </LinearLayout>
