--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -221,7 +221,7 @@
             android:layout_margin="5dp"
             android:background="@color/Transparent"
             android:contentDescription=""
-            android:src="@drawable/ic_back" />
+            android:src="@drawable/ic_back_game" />
 
         <LinearLayout
             android:layout_width="match_parent"
