--- a/app/src/main/res/layout/activity_levels.xml
+++ b/app/src/main/res/layout/activity_levels.xml
@@ -6,13 +6,14 @@
     <LinearLayout
         android:id="@+id/upper_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true">
 
         <ImageButton
             android:id="@+id/game_back_btn_levels_screen"
             android:layout_width="wrap_content"
-            android:layout_height="50dp"
-            android:layout_margin="5dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="5dp"
             android:background="@color/Transparent"
             android:src="@drawable/ic_back"
             android:clickable="true"/>
@@ -20,10 +21,9 @@
     </LinearLayout>
 
     <ImageView
-        android:layout_below="@id/upper_layout"
         android:id="@+id/game_logo"
-        android:layout_width="360dp"
-        android:layout_height="100dp"
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
         android:layout_centerHorizontal="true"
         android:contentDescription=""
         android:src="@drawable/makeiteven_v2" />
@@ -34,5 +34,6 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/game_logo"
         android:layout_centerHorizontal="true"
-        android:layout_margin="5dp" />
+        android:layout_margin="5dp"
+        android:layout_above="@id/upper_layout"/>
 </RelativeLayout>
