--- a/app/src/main/res/layout/fragment_end_of_arcade_game.xml
+++ b/app/src/main/res/layout/fragment_end_of_arcade_game.xml
@@ -41,16 +41,20 @@
             android:textSize="30sp"
             android:textStyle="bold" />
     </LinearLayout>
-
+<android.support.design.widget.TextInputLayout
+    android:id="@+id/nickname_et"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    >
     <EditText
-        android:id="@+id/nickname_et"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Enter  nickname: "
         android:inputType="textCapSentences"
-        android:padding="10dp"
         android:textSize="20sp"
-        android:layout_marginTop="20dp"/>
+       />
+</android.support.design.widget.TextInputLayout>
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
@@ -61,30 +65,32 @@
             android:layout_width="70dp"
             android:layout_height="70dp"
             android:layout_gravity="center"
-            android:layout_margin="5dp"
+            android:layout_margin="20dp"
             android:background="@color/Transparent"
             android:scaleType="fitCenter"
             android:src="@drawable/score_btn_icon" />
-
-        <ImageButton
-            android:id="@+id/play_again_btn"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_gravity="center"
-            android:layout_margin="5dp"
-            android:background="@color/Transparent"
-            android:scaleType="fitCenter"
-            android:src="@drawable/ic_restart" />
 
         <ImageButton
             android:id="@+id/play_stage_mode_btn"
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_gravity="center"
-            android:layout_margin="5dp"
+            android:layout_margin="20dp"
             android:src="@drawable/ic_house"
+            android:background="@color/Transparent"/>
+
+        <ImageButton
+            android:id="@+id/play_again_btn"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_gravity="center"
+            android:layout_margin="20dp"
             android:background="@color/Transparent"
-     />
+            android:scaleType="fitCenter"
+            android:src="@drawable/ic_restart" />
+
+
+
 
 
     </LinearLayout>
