--- a/app/src/main/res/layout/activity_start__screen.xml
+++ b/app/src/main/res/layout/activity_start__screen.xml
@@ -7,13 +7,23 @@
     android:background="@drawable/color_change"
     android:layoutDirection="ltr"
     tools:context=".StartScreenActivity">
+<!--<FrameLayout-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:id="@+id/action_bar_start_activity">-->
+
+<!--</FrameLayout>-->
+
+    <include layout="@layout/app_toolbar"
+        android:id="@+id/app_bar_start_activity">
+
+    </include>
 
     <ImageView
         android:id="@+id/game_logo"
         android:layout_width="360dp"
         android:layout_height="324dp"
         android:layout_centerHorizontal="true"
-        android:contentDescription=""
         android:src="@drawable/makeiteven_v2" />
 
     <Button
@@ -48,7 +58,6 @@
         android:layout_alignParentBottom="true"
         android:layout_margin="10dp"
         android:background="@drawable/setting_btn"
-        android:contentDescription=""
         android:src="@drawable/ic_settings_black_24dp" />
 
     <ImageButton
