--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -64,17 +64,17 @@
         </LinearLayout>
 
 
-        <TextView
+        <com.yoyo.makeiteven.MyTextView
             android:id="@+id/the_number"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/arcade_container"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="5dp"
-            android:text=""
-            android:textColor="@color/primaryTextColor"
             android:textSize="55sp"
-            android:textStyle="bold" />
+            android:textColor="@color/primaryTextColor"
+
+            />
 
 
         <LinearLayout
