--- a/app/src/main/res/layout/app_toolbar.xml
+++ b/app/src/main/res/layout/app_toolbar.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:theme="@style/CustomToolBarStyle"
-    app:popupTheme="@style/CustomToolBarStyle"
+    app:popupTheme="@style/CustomPopUpStyle"
     >
 
 </android.support.v7.widget.Toolbar>
