--- a/app/src/main/res/menu/action_menu.xml
+++ b/app/src/main/res/menu/action_menu.xml
@@ -1,10 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    >
-<item
-   android:id="@+id/action_about"
-    android:title="About Us"
-    app:showAsAction="never"/>
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".StartScreenActivity">
+    <item
+        android:id="@+id/action_about"
+        android:title="About Us"
+        app:showAsAction="never"
+        >
+
+    </item>
+    <item
+        android:id="@+id/action_settings"
+        android:title="Settings"
+        app:showAsAction="never"
+        >
+
+    </item>
+
 
 </menu>
