--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,7 +20,16 @@
         <item name="android:windowTransitionBackgroundFadeDuration">600</item>
         <item name="android:windowFullscreen">true</item>
     </style>
-    <style name="CustomToolBarStyle" parent="Theme.AppCompat.Light.NoActionBar"
-    ></style>
+
+    <style name="CustomToolBarStyle" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:background">#FFFF</item>
+        >
+    </style>
+
+    <style name="CustomPopUpStyle" parent="Theme.AppCompat.Light.NoActionBar">
+        <!--<item name="android:background">#C4C4C4</item>-->
+        <item name="overlapAnchor">false</item>
+        <item name="android:dropDownVerticalOffset">-4dp</item>
+    </style>
 
 </resources>
