--- a/app/src/main/res/layout/activity_start__screen.xml
+++ b/app/src/main/res/layout/activity_start__screen.xml
@@ -73,13 +73,16 @@
 
     <Button
         android:id="@+id/totorial_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="79dp"
-        android:layout_marginBottom="13dp"
-        android:text="Tutorial" />
+        android:layout_width="250dp"
+        android:layout_height="60dp"
+        android:layout_below="@id/arcade_mode_btn"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/tutorial_btn_background"
+        android:textAllCaps="false"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:text="@string/tutorial"/>
 
     <RelativeLayout
         android:layout_width="wrap_content"
