--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -20,7 +20,7 @@
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="10dp"
-            android:text="Settings"
+            android:text="@string/settings"
             android:textSize="30sp"
             android:textStyle="bold" />
 
@@ -102,7 +102,7 @@
         android:layout_margin="10dp"
         android:background="@drawable/reset_game"
         android:clickable="true"
-        android:text="Reset game levels"
+        android:text="@string/reset_game_levels"
         android:textAllCaps="false" />
 
     <ImageButton
