--- a/app/src/main/res/drawable/ic_house.xml
+++ b/app/src/main/res/drawable/ic_house.xml
@@ -5,7 +5,7 @@
     android:viewportHeight="512">
   <path
       android:pathData="M382.933,73.6h58.667v102.4h-58.667z"
-      android:fillColor="#F05540"/>
+      android:fillColor="#323232"/>
   <path
       android:pathData="M360.533,21.333h103.467v55.467h-103.467z"
       android:fillColor="#FDD05C"/>
