--- a/app/src/main/res/layout/activity_tutorial.xml
+++ b/app/src/main/res/layout/activity_tutorial.xml
@@ -6,10 +6,10 @@
     android:id="@+id/main_layot">
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:id="@+id/totorial_textview"
-        android:text="Test run"
+        android:text="@string/tutorial"
         android:textSize="22dp"
         android:textStyle="bold"
         android:layout_margin="10dp"
@@ -32,7 +32,7 @@
         <Button
             android:layout_width="100dp"
             android:layout_height="50dp"
-            android:text="Back"
+            android:text="@string/back"
             android:textStyle="bold"
             android:background="@drawable/fragment_background"
             android:id="@+id/back_btn"
@@ -40,7 +40,7 @@
         <Button
             android:layout_width="100dp"
             android:layout_height="50dp"
-            android:text="Next"
+            android:text="@string/next"
             android:textStyle="bold"
             android:background="@drawable/fragment_background"
             android:id="@+id/next_btn_ib"
