--- a/app/src/main/res/menu/action_menu.xml
+++ b/app/src/main/res/menu/action_menu.xml
@@ -4,7 +4,7 @@
     >
 <item
    android:id="@+id/action_about"
-    android:title="About Us"
+    android:title="@string/about_us"
     app:showAsAction="never"/>
 
 </menu>
