--- a/app/src/main/res/layout/about_dialog.xml
+++ b/app/src/main/res/layout/about_dialog.xml
@@ -4,7 +4,9 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:background="#FFFF"
-    android:padding="20dp">
+    android:padding="20dp"
+    android:layoutDirection="ltr"
+    android:textDirection="ltr">
 
     <ImageView
         android:layout_width="wrap_content"
