--- a/app/src/main/res/menu/action_menu.xml
+++ b/app/src/main/res/menu/action_menu.xml
@@ -12,7 +12,7 @@
     </item>
     <item
         android:id="@+id/action_settings"
-        android:title="Settings"
+        android:title="@string/settings"
         app:showAsAction="never"
         >
 
