--- a/app/src/main/res/layout/activity_score_board.xml
+++ b/app/src/main/res/layout/activity_score_board.xml
@@ -9,6 +9,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:text="@string/HigeScore"
+        android:textColor="@color/primaryTextColor"
         android:textSize="50sp" />
 
     <ListView
