--- a/app/src/main/res/layout/activity_start_screen.xml
+++ b/app/src/main/res/layout/activity_start_screen.xml
@@ -24,8 +24,8 @@
 
     <Button
         android:id="@+id/stage_mode_btn"
-        android:layout_width="260dp"
-        android:layout_height="70dp"
+        android:layout_width="250dp"
+        android:layout_height="60dp"
         android:layout_centerInParent="true"
         android:background="@drawable/stage_btn"
         android:text="@string/Stage_mode"
@@ -35,8 +35,8 @@
 
     <Button
         android:id="@+id/arcade_mode_btn"
-        android:layout_width="260dp"
-        android:layout_height="70dp"
+        android:layout_width="250dp"
+        android:layout_height="60dp"
         android:layout_below="@id/stage_mode_btn"
         android:layout_centerInParent="true"
         android:layout_marginTop="25dp"
@@ -81,8 +81,7 @@
         android:textAllCaps="false"
         android:textSize="20sp"
         android:textStyle="bold"
-        android:text="@string/tutorial"
-        android:visibility="gone"/>
+        android:text="@string/tutorial"/>
 
     <RelativeLayout
         android:layout_width="wrap_content"
