--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -268,6 +268,14 @@
                 android:background="@color/Transparent"
                 android:scaleType="fitCenter"
                 android:src="@drawable/ic_help" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="@string/hints_left"
+                android:id="@+id/hints_left"
+                android:textColor="#000"
+                android:gravity="bottom"
+                />
 
 
         </LinearLayout>
