--- a/app/src/main/res/layout/activity_start_screen.xml
+++ b/app/src/main/res/layout/activity_start_screen.xml
@@ -69,6 +69,18 @@
         android:src="@drawable/score_btn_icon"
         android:contentDescription="scoreBoard icon"/>
 
+    <ImageButton
+        android:id="@+id/shopping_cart_btn"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_alignParentRight="true"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        android:layout_alignParentBottom="true"
+        android:background="@color/Transparent"
+        android:scaleType="fitCenter"
+        android:src="@drawable/ic_shopping_cart"
+        android:contentDescription="scoreBoard icon"/>
 
     <Button
         android:id="@+id/totorial_btn"
@@ -76,7 +88,7 @@
         android:layout_height="60dp"
         android:layout_below="@id/arcade_mode_btn"
         android:layout_centerInParent="true"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="25dp"
         android:background="@drawable/tutorial_btn_background"
         android:textAllCaps="false"
         android:textSize="20sp"
